feat: add webhook support for task events (OCB-35)
Events:
- task.created - New task created
- task.updated - Task fields changed (with changes array)
- task.status_changed - Task status transition
- task.deleted - Task removed

Configuration via env vars:
- WEBHOOK_URL - Endpoint to POST events to
- WEBHOOK_SECRET - Optional HMAC-SHA256 signing key
- WEBHOOK_EVENTS - Optional filter (comma-separated)
- Support for up to 5 additional webhooks via _1, _2, etc.

Features:
- Fire-and-forget delivery (non-blocking)
- 10s timeout per webhook
- Signature in X-OpenClaw-Signature header
- Unique delivery ID in X-OpenClaw-Delivery header

Enables integrations with Slack, Discord, n8n, Zapier, etc.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-DATABASE_URL="postgresql://moltbot:moltbot@localhost:5432/moltbot?schema=public"
+# Database connection
+DATABASE_URL="postgresql://user:password@localhost:5432/openclaw?schema=public"
+
+# Webhook configuration (optional)
+# POST to this URL when task events occur
+WEBHOOK_URL=
+
+# Secret for HMAC-SHA256 signature verification (optional but recommended)
+# Signature sent in X-OpenClaw-Signature header as "sha256=<hex>"
+WEBHOOK_SECRET=
+
+# Comma-separated list of events to send (empty = all events)
+# Available: task.created, task.updated, task.status_changed, task.deleted
+WEBHOOK_EVENTS=
+
+# Additional webhooks (up to 5)
+# WEBHOOK_URL_1=
+# WEBHOOK_SECRET_1=
+# WEBHOOK_EVENTS_1=
