--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prisma": "^7.3.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0",
     "ws": "^8.19.0"
   },
